--- a/lw3/package.json
+++ b/lw3/package.json
@@ -11,6 +11,7 @@
   "dependencies": {},
   "devDependencies": {
     "gulp": "^3.9.1",
+    "gulp-contrib-copy": "^0.1.3",
     "gulp-cssmin": "^0.2.0",
     "gulp-uglify": "^3.0.0"
   }
