--- a/lw3/package.json
+++ b/lw3/package.json
@@ -11,8 +11,10 @@
   "dependencies": {},
   "devDependencies": {
     "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^4.0.0",
     "gulp-contrib-copy": "^0.1.3",
     "gulp-cssmin": "^0.2.0",
+    "gulp-rename": "^1.2.2",
     "gulp-uglify": "^3.0.0"
   }
 }
